# CGopt

./: GAN.ipynb  README.md  detect.py  detectDAE.py  detectDAE2.py  detectDAE2_batch16.py  detectDAE2_epoch60.py  detectDAE2_epoch90.py  detectGAN.py  detectL1.py  detectMSE.py  detectNAFNet.py  detectPoisson.py  detectSL1.py  detectTotalVariation.py  detectUnet.py  detectUnet_batch16.py  detectUnet_epoch60.py  detectUnet_epoch90.py  pyproject.toml
unused/: detectDAE2_batch16.py  detectDAE_batch16.py  detectDAE_batch4.py  detectSL1.py
