[tool.poetry]
name = "cgopt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
scikit-image = "^0.21.0"
opencv-python = "^4.8.0.74"
typing-extensions = "^4.7.1"
torch = {version = "^2.0.1+cpu", source = "torch-cpu"}


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
